# IsoVelo

./: .gitignore  README.md  pyproject.toml  simulation.ipynb  simulation.py
cellDancer/: LICENSE  MANIFEST.in  isovelo_isoform_velocities.csv  readme.rst  readme_pypi.rst  requirements.txt  setup.py
cellDancer/examples/case1/: case1.py
cellDancer/examples/isovelo/: IsoVelo.py  IsoVelo_test.py  iso_test.py
cellDancer/isovelo_velocity_2026-01-27 13-21-11/: isovelo_estimation.csv
cellDancer/isovelo_velocity_2026-01-31 21-39-18/: loss.csv
cellDancer/isovelo_velocity_2026-02-04 13-51-21/TEMP/: isovelo_estimation_ABHD15-AS1.csv  isovelo_estimation_ANKRD37.csv  isovelo_estimation_ATP2A2.csv  isovelo_estimation_BSCL2.csv  isovelo_estimation_C17orf49.csv  isovelo_estimation_C4orf3.csv  isovelo_estimation_CAPNS1.csv  isovelo_estimation_COMMD6.csv  isovelo_estimation_COQ4.csv  isovelo_estimation_COX16.csv  isovelo_estimation_CSDE1.csv  isovelo_estimation_DCTN3.csv  loss_ABHD15-AS1.csv  (+46 more)
cellDancer/notebooks/: case_study_gastrulation.ipynb  case_study_hgforebrian.ipynb  case_study_neuro.ipynb  case_study_pancreas.ipynb  case_study_pancreas_dynamo.ipynb  case_study_rpe1.ipynb  celldancer_prototype_model.ipynb
cellDancer/tests/: test_isovelo.py
simulation/: simulation.py  simulation_2isoforms.py  simulation_test.py
src/: dm_mixture_em.py
src/IsoVelo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/isovelo/: __main__.py  _constant.py  _model.py  _module.py  _utils.py  environment.yml  main_process.py  model.py  module.py  test.ipynb  util.py
(+37 files in other folders)
